# debuggai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
debuggai/: __init__.py  cli.py  config.py  mcp_server.py  orchestrator.py  storage.py
debuggai/engines/: fix.py
debuggai/engines/code/: imports.py  llm_review.py  performance.py  rules.py  scanner.py  security.py
debuggai/engines/deep/: analyzer.py  engine.py  holistic.py  indexer.py
debuggai/engines/intent/: capture.py  parser.py  scorer.py
debuggai/engines/persona/: agent.py  analyzer.py  discover.py  engine.py  experience.py
debuggai/models/: __init__.py  assertions.py  issues.py  reports.py
debuggai/reports/: generator.py
debuggai/utils/: constants.py  git.py  llm.py
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts
tests/: test_context.py  test_imports.py  test_performance.py  test_security.py  test_storage.py
tests/fixtures/: buggy_javascript.js  buggy_python.py
